err/xhpy.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xhpy'...
Compiling './lib/python3.5/site-packages/xhpy/__init__.py'...
Compiling './lib/python3.5/site-packages/xhpy/constants.py'...
Compiling './lib/python3.5/site-packages/xhpy/init.py'...
***   File "./lib/python3.5/site-packages/xhpy/init.py", line 80
    exec code in mod.__dict__
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/xhpy/parser.py'...
***   File "./lib/python3.5/site-packages/xhpy/parser.py", line 1457
    print token.id, token.value, token.start, token.end
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xhpy/pylib'...
Compiling './lib/python3.5/site-packages/xhpy/pylib/__init__.py'...
Compiling './lib/python3.5/site-packages/xhpy/pylib/core.py'...
***   File "./lib/python3.5/site-packages/xhpy/pylib/core.py", line 26
    if not isinstance(that, :x:base):
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xhpy/pylib/exception.py'...
Compiling './lib/python3.5/site-packages/xhpy/pylib/html.py'...
***   File "./lib/python3.5/site-packages/xhpy/pylib/html.py", line 7
    from .core import :x:base, :x:primitive
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xhpy/utils.py'...
Listing './lib/python3.5/site-packages/xhpy-0.83.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
